--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 
   <div class="container">
     <header>
+      <!-- TITOLO -->
       <div class="title">
         <h1>FontIcons</h1>
       </div>
       <nav>
+        <!-- RICERCA -->
         <label for="type">filtra per tipo</label>
         <select name="type" id="type">
-          <option value="volvo">All</option>
+          <option value="all">All</option>
         </select>
       </nav>
     </header>
+
+    <!-- ICONS VARIE -->
   </div>
 
 
