--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>WillyBoys</title>
 </head>
 <body>
 
   <div class="container">
     <header>
       <!-- TITOLO -->
-      <div class="title">
-        <h1>FontIcons</h1>
-      </div>
-      <nav>
-        <!-- RICERCA -->
-        <label for="type">filtra per tipo</label>
-        <select name="type" id="type">
-          <option value="all">All</option>
-        </select>
+      <div class="title"> FontIcons </div>
+      <!-- RICERCA -->
+      <nav class="ricerca">
+        <div>
+          <label for="type">filtra per tipo</label>
+          <select name="type" id="type">
+            <option value="all">All</option>
+          </select>
+
+        </div>
       </nav>
     </header>
 
