--- a/index.html
+++ b/index.html
@@ -22,12 +22,75 @@
           <select name="type" id="type">
             <option value="all">All</option>
           </select>
-
         </div>
       </nav>
     </header>
 
     <!-- ICONS VARIE -->
+    <div class="icone">
+      <!-- PROVA -->
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+      <div class="icona">
+        <i class="fas fa-crow"></i>
+        <div class="nome">CROW</div>
+      </div>
+
+    </div>
   </div>
 
 
