--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- ICONS VARIE -->
     <div class="icone">
       <!-- PROVA -->
-      <div class="icona">
+      <!-- <div class="icona">
         <i class="fas fa-crow"></i>
         <div class="nome">CROW</div>
       </div>
@@ -88,7 +88,7 @@
       <div class="icona">
         <i class="fas fa-crow"></i>
         <div class="nome">CROW</div>
-      </div>
+      </div> -->
 
     </div>
   </div>
